# x2dit

./: .gitignore  README.md
.github/workflows/: ci.yml
circuits/: CIRCUIT_RESULTS.md
docs/: ARCHITECTURE.md  ZK-DESIGN.md
docs/superpowers/plans/: 2026-06-23-frontend-backend-wiring.md  2026-06-25-proofreceipt-m1.md
frontend/: package.json  pnpm-lock.yaml  vitest.config.ts
frontend/scripts/: gen-poseidon-constants.mjs
frontend/src/lib/: config.test.ts  config.ts  site.ts
proofreceipt-buyer/: package.json
proofreceipt-buyer/src/: escrow-client.test.ts  escrow-client.ts  escrow-run.ts  mcp-tools.test.ts  mcp-tools.ts  mcp.ts
proofreceipt-contract/: .gitignore
proofreceipt-m0/: .gitignore  Cargo.toml  README.md
proofreceipt-m0/host/: Cargo.toml
proofreceipt-m0/host/src/: main.rs
proofreceipt-m0/host/tests/: policy_journal.rs
proofreceipt-m0/methods/: Cargo.toml  build.rs
proofreceipt-m0/methods/guest/wasm-policy/: Cargo.toml
proofreceipt-m0/methods/guest/wasm-policy/src/: lib.rs  parser.rs  policy.rs
proofreceipt-m0/methods/guest/wasm-policy/tests/fixtures/: .gitignore  README.md  clean.wasm  denylisted.wasm
proofreceipt-m0/methods/src/: lib.rs
proofreceipt-m0/scripts/: deploy_verifier.sh  verify_onchain.sh
proofreceipt-server/: Cargo.toml  proofreceipt-server.example.toml
proofreceipt-server/src/: audit.rs  config.rs  escrow.rs  job.rs  lib.rs  main.rs  x402.rs
relayer/: Cargo.toml  config.example.toml
relayer/src/: backing.rs  config.rs  evm.rs  lib.rs  main.rs  soroban.rs
relayer/tests/: config_and_parse.rs  idempotency.rs
(+15 files in other folders)
